--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
-
 {
-  "name": "example",
-  "version": "0.0.1",
-  "description": "my first app",
-  "dependencies": {}
+      "name": "to-do",
+      "version": "1.0.0",
+      "description": "Simple todo app",
+      "main": "server.js",
+      "scripts": {
+           "start": "server.js",
+           "test": "echo \"Error: no test specified\" && exit 1"
+       },
+      "keywords": [
+          "node",
+          "angular"
+      ],
+      "dependencies" : {
+          "express"    : "~4.7.2"
+      },
+      "license": "MIT"
 }
